<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">RAC</string>
    <string name="loading">Loading ...</string>
    <string name="realm_title">Realm:<xliff:g id="realm">%s</xliff:g></string>
    <string name="choose_realm_title">Select Realm</string>

    <string name="options_button">Choose Option</string>
    <string name="update_button">Update</string>
    <string name="submit_button">Submit</string>
    
    <string name="refresh_button">Refresh</string>
    <string name="close_button">Close</string>
    
    <string name="look_for_tag">Hit update to search for nearby marks!</string>
    
    <!-- Setup screen -->
    <string name="setup_title">Setup</string>
    <string name="access_denied">Access Denied!</string>
    <string name="nextbutton">Next</string>
    <string name="title">Setup</string>
    <string name="useridtitle">Enter user ID</string>
    <string name="useridprompt">User ID</string>
    <string name="password">Password</string>
    <string name="Realm">Realm</string>
    <string name="useriderrortext">Please enter a user ID</string>
    <string name="save_button">Save</string>

</resources>